--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -43,7 +43,7 @@ n*(n+1)/2
 n <- 25
 n*(n+1)/2
 
-# Below, write your code to calculate the sum of the first 100 integers
+# Below, write code to calculate the sum of the first 100 integers
 
 ```
 
@@ -59,7 +59,7 @@ n*(n+1)/2
 n <- 25
 n*(n+1)/2
 
-# Below, write your code to calculate the sum of the first 100 integers 
+# Below, write code to calculate the sum of the first 100 integers 
 n <- 100
 n*(n+1)/2 
 ```
