--- a/chapter2.Rmd
+++ b/chapter2.Rmd
@@ -19,7 +19,7 @@ library(dslabs)
 data(murders)
 ```
 
-Next, use the function `str` to examine the structure of the *murders* object. We can see that this object is a data frame with 51 rows and five columns. 
+Next, use the function `str` to examine the structure of the `murders` object. We can see that this object is a data frame with 51 rows and five columns. 
 
 Which of the following best describes the variables represented in this data frame:
 
@@ -31,7 +31,7 @@ Which of the following best describes the variables represented in this data fra
 - `str` shows no relevant information
 
 `@hint`
-Check the output that you see with the `str` function.
+Check the output that you see when you type `str(murders)`.
 
 `@pre_exercise_code`
 ```{r}
@@ -61,8 +61,8 @@ skills: 1
 In the previous question, we saw the different variables that are a part of this dataset from the output of the `str()` function. The  function `names()` is specifically designed to extract the column names from a data frame. 
 
 `@instructions`
-For this question, we will use the `names()` function to extract the column names of the *murders* data frame.
-What are the column names used by the *murders* data frame for the five variables?
+For this question, we will use the `names()` function to extract the column names of the `murders` data frame.
+What are the column names used by the `murders` data frame for the five variables?
 
 `@hint`
 Make sure you put the name of the dataset - `murders` - in parentheses after names. 
@@ -108,7 +108,7 @@ success_msg("Good job!")
 
 In this module we have learned that every variable has a class. For example, the class can be a *character*, *numeric* or *logical*. The function `class()` can be used to determine the class of an object.
 
-Here we are going to determine the class of one of the variables in the *murders* data frame. To extract variables from a data frame we use `$`, referred to as the accessor.
+Here we are going to determine the class of one of the variables in the `murders` data frame. To extract variables from a data frame we use `$`, referred to as the accessor.
 
 In the editor we show an example of how to do this. Let`s try it out for ourselves. 
 
@@ -325,7 +325,7 @@ We will use the `table` function to answer this question.
 Use this function in one line of code to create a table showing the number of states per region.
 
 `@hint`
-Extract the variable *region* from the *murders* dataset and then use the `table` function to create the table. 
+Extract the variable *region* from the `murders` dataset and then use the `table` function to create the table. 
 
 `@pre_exercise_code`
 ```{r}
