--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -1,6 +1,7 @@
 ---
 title       : Vectors
 description : The most basic unit to store data in R are vectors. We'll learn about creating and working with them in this chapter.
+
 ---
 ## Numeric Vectors
 
@@ -35,7 +36,7 @@ Make sure your numbers are within parenthesis and have commas separating them.
 cost <- c(50, 75, 90, 100, 150)
 
 # Create a numeric vector to store the temperatures listed above into temp
-# Make sure to follow the same order as above
+# Make sure to follow the same order in the instructions
 
 ```
 
@@ -45,7 +46,7 @@ cost <- c(50, 75, 90, 100, 150)
 cost <- c(50, 75, 90, 100, 150)
 
 # Create a numeric vector to store the temperatures listed above into temp
-# Make sure to follow the same order as above
+# Make sure to follow the same order in the instructions
 temp <- c(35, 88, 42, 84, 81, 30)
 ```
 
@@ -55,6 +56,7 @@ test_error()
 test_object("temp", incorrect_msg = "Check to match the numbers from the question.")
 success_msg("Good job! Do you want to now try creating a character vector")
 ```
+
 ---
 ## Character vectors
 
@@ -178,7 +180,6 @@ city <- c("Beijing", "Lagos", "Paris", "Rio de Janeiro", "San Juan", "Toronto")
 
 # Associate the temperature values with its corresponding city
 names(temp) <- city
-
 ```
 
 `@sct`
@@ -735,7 +736,6 @@ type: PlainMultipleChoiceExercise
 lang: r
 xp: 0
 skills: 1
-key: d596636416
 ```
 This is the end of the programming assignment for this section. 
 
