--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -354,7 +354,7 @@ skills: 1
 
 `@instructions`
 This time we will use just the `:` operator.
-Use the `:` operator to create a sequence of numbers `12,13,14....73` and save it in an object `x`.
+Use the `:` operator to create a sequence of consecutive integers starting 12 and ending at 73 and save it in an object `x`.
 
 `@hint`
 Save the sequence in an object called `x`. 
@@ -366,14 +366,13 @@ Save the sequence in an object called `x`.
 
 `@sample_code`
 ```{r}
-# Creating a sequence of numbers 32,33,34...99 and storing it in object `m`
+# To store a sequence in the object `m` that starts at 32 and ends at 99 we type:
 m <- 32:99
 
 # Determining the length of object `m`
 length(m)
 
-# Creating a sequence of numbers `12,13,14...73` and storing it in object `x`
-
+# Store a sequence in the object `x` that starts at 12 and ends at 73:
 
 # Determining the length of object `x`
 
@@ -382,13 +381,13 @@ length(m)
 
 `@solution`
 ```{r}
-# Creating a sequence of numbers 32,33,34...99 and storing it in object `m`
+# To store a sequence in the object `m` that starts at 32 and ends at 99 we type:
 m <- 32:99
 
 # Determining the length of object `m`
 length(m)
 
-# Creating a sequence of numbers `12,13,14...73` and storing it in object `x`
+# Store a sequence in the object `x` that starts at 12 and ends at 73:
 x <- 12:73
 
 # Determining the length of object `x`
@@ -746,7 +745,6 @@ type: PlainMultipleChoiceExercise
 lang: r
 xp: 0
 skills: 1
-key: d596636416
 ```
 This is the end of the programming assignment for this section. 
 
